Complete English translation and codebase cleanup
- Translated all Python code (views, models, services, tests, management commands)
- Translated all HTML templates (accountinfo, reportes, analytics, dashboard, auth pages)
- Translated script_actualizar_TAG.py (production tool)
- Updated all documentation (README, ARCHITECTURE, PYTHONANYWHERE_DEPLOY)
- Renamed Spanish identifiers: variables, functions, methods, class fields
- Updated SyncResult dataclass and TagSyncProcessor internals
- Standardized naming conventions across services layer
- Removed unnecessary files (Registros.txt, DEPLOYMENT.md)
- Updated README to emphasize script as production tool, web as demo

--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,9 @@ staticfiles/
 media/
 
 # Excel data files (real company data - DO NOT commit)
-OCS/*.xlsx
-OCS/*.xls
+OCS/AR01*.xlsx
+OCS/CLASIFICADOR*.xlsx
+OCS/Reportes.xlsx
 
 # Logs
 OCS/Registros.txt
@@ -52,3 +53,8 @@ build/
 .pytest_cache/
 .coverage
 htmlcov/
+coverage.xml
+
+# Byte-compiled / optimized
+*.pyc
+*.pyo
