--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,20 +52,6 @@ jobs:
       matrix:
         python-version: ["3.11", "3.12"]
 
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ROOT_PASSWORD: testpass
-          MYSQL_DATABASE: ocsweb
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd "mysqladmin ping -h 127.0.0.1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
       - uses: actions/checkout@v4
 
@@ -81,16 +67,10 @@ jobs:
           key: ${{ runner.os }}-pip-${{ hashFiles('OCS/requirements.txt') }}
           restore-keys: ${{ runner.os }}-pip-
 
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y default-libmysqlclient-dev build-essential pkg-config
-
       - name: Install Python dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r OCS/requirements.txt
-          pip install pytest pytest-django pytest-cov
 
       - name: Create .env for testing
         run: |
@@ -98,13 +78,14 @@ jobs:
           SECRET_KEY=test-secret-key-for-ci-pipeline-only
           DEBUG=True
           ALLOWED_HOSTS=*
-          DB_NAME=ocsweb
-          DB_USER=root
-          DB_PASSWORD=testpass
-          DB_HOST=127.0.0.1
-          DB_PORT=3306
-          ARCHIVO_ECONOMIA=demo_data/AR01_demo.xlsx
-          ARCHIVO_CLASIFICADOR=demo_data/clasificador_demo.xlsx
+          DB_ENGINE=django.db.backends.sqlite3
+          DB_NAME=db.sqlite3
+          DB_USER=
+          DB_PASSWORD=
+          DB_HOST=
+          DB_PORT=
+          EXCEL_ECONOMIA=demo_data/AR01_demo.xlsx
+          EXCEL_CLASIFICADOR=demo_data/clasificador_demo.xlsx
           EOF
 
       - name: Run migrations
