--- a/OCS/.env.example
+++ b/OCS/.env.example
@@ -11,21 +11,21 @@ DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database Configuration
-# ---- Option A: MySQL (production) ----
-DB_ENGINE=django.db.backends.mysql
-DB_NAME=ocsweb
-DB_USER=root
-DB_PASSWORD=your-password-here
-DB_HOST=localhost
-DB_PORT=3306
+# ---- Option A: SQLite (default, works everywhere, FREE) ----
+DB_ENGINE=django.db.backends.sqlite3
+DB_NAME=db.sqlite3
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
 
-# ---- Option B: SQLite (local demo, no MySQL needed) ----
-# DB_ENGINE=django.db.backends.sqlite3
-# DB_NAME=db.sqlite3
-# DB_USER=
-# DB_PASSWORD=
-# DB_HOST=
-# DB_PORT=
+# ---- Option B: MySQL (only if you have MySQL installed) ----
+# DB_ENGINE=django.db.backends.mysql
+# DB_NAME=ocsweb
+# DB_USER=root
+# DB_PASSWORD=your-password-here
+# DB_HOST=localhost
+# DB_PORT=3306
 
 # Script Configuration
 EXCEL_ECONOMIA=demo_data/AR01_demo.xlsx
